adding value changes
....from change log 4 on Confluence

--- a/app/views/adding-value-2024/current/eligibility/common/business-type.html
+++ b/app/views/adding-value-2024/current/eligibility/common/business-type.html
@@ -78,7 +78,7 @@
 
         </div>
 
-        <div class="govuk-grid-column-one-third">
+        {# <div class="govuk-grid-column-one-third">
 
             <div class="app-step-nav-related app-step-nav-related--singular">
                 <h2 class="app-step-nav-related__heading">
@@ -102,7 +102,7 @@
 
             </div>
 
-        </div>
+        </div> #}
 
 </div>
 
