--- a/app/views/adding-value-2024/current/eligibility/common/elim-business-type.html
+++ b/app/views/adding-value-2024/current/eligibility/common/elim-business-type.html
@@ -23,7 +23,7 @@
                         are agricultural or horticultural growers or producers
                     </li>
                     <li>
-                        are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers
+                        are processing agricultural or horticultural products that are at least 50% owned by agricultural or horticultural producers
                     </li>
                     <li>
                         produce wild venison products as part of woodland management
