--- a/app/views/adding-value-2024/current/scoring/value.html
+++ b/app/views/adding-value-2024/current/scoring/value.html
@@ -35,7 +35,7 @@
                             value: 'Introducing a new product to your farm',
                             checked: true if data['scoring-value'] == 'Introducing a new product to your farm',
                             hint: {
-                                text: 'For example, slaughtering, cut and packed meat, yogurt to cheese, brewing or distilling'
+                                text: 'For example, processing of meat to burgers, milk to cheese, cereals to beer or spirits'
                             }
                         },
                         {
