--- a/app/views/adding-value-2024/current/start-page.html
+++ b/app/views/adding-value-2024/current/start-page.html
@@ -49,15 +49,15 @@
       </ul>
 
       <p>
-        You must do the grant-funded work in England.
+        You can apply for up to 40% of the estimated cost of project items. You have the option to apply for up to 25% of the estimated cost of buying and installing a solar PV system.
       </p>
 
       <p>
-        You can apply for up to 50% of the estimated cost of project items. You have the option to apply for up to 25% of the estimated cost of buying and installing a solar PV system.
+        The minimum grant for project costs is £25,000 (40% of £62,500). The maximum grant you can apply for is £300,000.
       </p>
 
       <p>
-        The minimum grant for project items is £20,000 (50% of £40,000). The maximum grant you can apply for, including solar, is £500,000. 
+        You can apply for up to an additional £100,000 for solar PV systems costs. Funding for solar PV cannot be more than grant funding for project costs.
       </p>
 
       {{ govukInsetText ({
