--- a/app/views/water-r3/current/eligibility/common/project-items.html
+++ b/app/views/water-r3/current/eligibility/common/project-items.html
@@ -1,19 +1,7 @@
-{% extends "layout.html" %}
+{% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-  Which items eligible for grant funding are included in the project?
-{% endblock %}
-
-{% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-  {{ govukPhaseBanner({
-    tag: {
-    text: "prototype",
-    classes: "govuk-tag--pink"
-    },
-      html: 'This is not a full service. It is not production code and you might experience problems.'
-  }) }}
-  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+     Which items eligible for grant funding are included in the project?
 {% endblock %}
 
 {% block content %}
@@ -21,7 +9,80 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <h1 class="govuk-heading-l">What eligible items do you need for your project?</h1>
+          <span id="project-items-hint" class="govuk-hint">
+              Select all the items your project needs
+            </span>
+
+      <form method="post" action="storage">
+
+               {{ govukCheckboxes({
+                  name: "checkbox1",
+                  fieldset: {
+                    legend: {
+                      text: "Reservoir construction and infrastructure",
+                      classes: "govuk-fieldset__legend--m govuk-!-margin-top-6"
+                    }
+                  },
+                  items: [
+                    {
+                      value: "Construction of reservoir walls",
+                      text: "Construction of reservoir walls",
+                      checked: true if 'Construction of reservoir walls' | isIn(data['items-needed'])
+                    },
+                    {
+                      value: "Overflow/spillway",
+                      text: "Overflow/spillway",
+                      checked: true if 'Overflow/spillway' | isIn(data['items-needed'])
+                    }, {
+                      value: "Construction of reservoir walls",
+                      text: "Construction of reservoir walls",
+                      checked: true if 'Construction of reservoir walls' | isIn(data['items-needed'])
+                    }, {
+                      value: "Synthetic liner",
+                      text: "Synthetic liner",
+                      checked: true if 'Synthetic liner' | isIn(data['items-needed'])
+                    }, {
+                      value: "Abstraction point including pump",
+                      text: "Absraction point including pump",
+                      checked: true if 'Absraction point including pump' | isIn(data['items-needed'])
+                    }, {
+                      value: "Fencing for synthetically lined reservoir",
+                      text: "Fencing for synthetically lined reservoir",
+                      checked: true if 'Fencing for synthetically lined reservoir' | isIn(data['items-needed'])
+                    }, {
+                      value: "Construction of reservoir walls",
+                      text: "Construction of reservoir walls",
+                      checked: true if 'Construction of reservoir walls' | isIn(data['items-needed'])
+                    }, {
+                      value: "Construction of reservoir walls",
+                      text: "Construction of reservoir walls",
+                      checked: true if 'Construction of reservoir walls' | isIn(data['items-needed'])
+                    }, {
+                      value: "Construction of reservoir walls",
+                      text: "Construction of reservoir walls",
+                      checked: true if 'Construction of reservoir walls' | isIn(data['items-needed'])
+                    }, {
+                      value: "Construction of reservoir walls",
+                      text: "Construction of reservoir walls",
+                      checked: true if 'Construction of reservoir walls' | isIn(data['items-needed'])
+                    }, {
+                      value: "Construction of reservoir walls",
+                      text: "Construction of reservoir walls",
+                      checked: true if 'Construction of reservoir walls' | isIn(data['items-needed'])
+                    }, {
+                      value: "Construction of reservoir walls",
+                      text: "Construction of reservoir walls",
+                      checked: true if 'Construction of reservoir walls' | isIn(data['items-needed'])
+                    } 
+                  ]
+                }) }}
+
+                {{ govukButton ({
+                    html: 'Continue'
+                }) }}
+
+         
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="project-items-hint">
